# rp2350-pico2

./: README.md
firmware/examples/rp2350-pico2-01-led/: CMakeLists.txt
firmware/examples/rp2350-pico2-01-led/src/: CMakeLists.txt
firmware/examples/rp2350-pico2-01-led/src/ap/: ap.cpp  ap_def.h
firmware/examples/rp2350-pico2-01-led/src/bsp/: bsp.c  bsp.h
firmware/examples/rp2350-pico2-01-led/src/hw/: hw.c  hw_def.h
firmware/examples/rp2350-pico2-02-cli/: CMakeLists.txt
firmware/examples/rp2350-pico2-02-cli/src/ap/: ap.cpp
firmware/examples/rp2350-pico2-02-cli/src/bsp/: bsp.h
firmware/examples/rp2350-pico2-02-cli/src/common/: def.h
firmware/examples/rp2350-pico2-02-cli/src/common/hw/include/: cli.h  lcd.h  uart.h
firmware/examples/rp2350-pico2-02-cli/src/common/hw/include/touch/: cst816t.h
firmware/examples/rp2350-pico2-02-cli/src/hw/: hw.h
firmware/examples/rp2350-pico2-02-cli/src/hw/driver/: led.c
firmware/rp2350-pico2-fw/src/: CMakeLists.txt
firmware/rp2350-pico2-fw/src/ap/: ap.h
firmware/rp2350-pico2-fw/src/bsp/: bsp.c
firmware/rp2350-pico2-fw/src/common/hw/include/: lcd_def.h
firmware/rp2350-pico2-fw/src/common/hw/include/lcd/: st7789.h
firmware/rp2350-pico2-fw/src/hw/: hw.c  hw_def.h
firmware/rp2350-pico2-fw/src/hw/driver/: uart.c
firmware/rp2350-pico2-fw/src/lib/lvgl/: lvgl.h
firmware/rp2350-pico2-fw/tools/osx/: picotool
